--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "porp-types": "^0.0.1-security",
+    "prop-types": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "prop-types": "latest"
+    "react-router-dom": "^5.0.1"
   }
 }
