--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --port 8080 --open"
+    "dev": "webpack-dev-server --port 8088 --open"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "path-to-regexp": "^3.1.0",
     "porp-types": "^0.0.1-security",
     "prop-types": "latest",
     "react": "^16.9.0",
